[gd_scene load_steps=32 format=2]

[ext_resource path="res://pyramids.webp" type="Texture" id=1]
[ext_resource path="res://Nau_cinem_pr-eg.tscn" type="PackedScene" id=2]
[ext_resource path="res://PacoCinematica.gd" type="Script" id=3]
[ext_resource path="res://Part Marc/Korred Sprite Sheet.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 4 )
region = Rect2( 0, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 4 )
region = Rect2( 32, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 4 )
region = Rect2( 64, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 4 )
region = Rect2( 96, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 4 )
region = Rect2( 128, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 96, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 128, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 160, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 192, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 224, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 96, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 4 )
region = Rect2( 128, 64, 32, 32 )

[sub_resource type="SpriteFrames" id=28]
animations = [ {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "default",
"speed": 7.0
}, {
"frames": [ SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": false,
"name": "dead",
"speed": 12.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "move",
"speed": 12.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": false,
"name": "attack",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 28.5, 31.5 )

[sub_resource type="RectangleShape2D" id=29]
extents = Vector2( 13.5, 313 )

[sub_resource type="RectangleShape2D" id=30]
extents = Vector2( 519, 92 )

[sub_resource type="RectangleShape2D" id=31]
extents = Vector2( 85.5, 271.5 )

[node name="cinematica preh-esgipte2" type="Node2D"]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 512, 299.5 )
scale = Vector2( 1.51704, 1.57632 )
texture = ExtResource( 1 )

[node name="Nau_cinem_pr-eg" parent="Sprite" instance=ExtResource( 2 )]
position = Vector2( -429.785, -170.968 )
scale = Vector2( 0.8, 0.8 )

[node name="PacoCinematica" type="KinematicBody2D" parent="."]
position = Vector2( -20, -181 )
scale = Vector2( 1.21363, 1.26105 )
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="PacoCinematica"]
position = Vector2( 74, 492 )
scale = Vector2( 4.15625, 4.34375 )
frames = SubResource( 28 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="PacoCinematica"]
position = Vector2( 73, 528.5 )
shape = SubResource( 22 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 3.5, 303 )
shape = SubResource( 29 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 509, 597 )
shape = SubResource( 30 )

[node name="Area2Dcinematica-egipte" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2Dcinematica-egipte"]
position = Vector2( 1075.5, 230.5 )
shape = SubResource( 31 )

[connection signal="body_entered" from="Area2Dcinematica-egipte" to="PacoCinematica" method="_on_Area2Dcinematicaegipte_body_entered"]
